resolve spacing issue

--- a/trunk/client_views/properties_views/css/properties_preview.css
+++ b/trunk/client_views/properties_views/css/properties_preview.css
@@ -208,10 +208,16 @@
 
 @media only screen and (min-width: 992px) {
     .social_media_div.sell {
-        padding-top: 234px;
+        padding-top: 237px;
     }
     .social_media_div.rent {
-        padding-top: 0px
+        padding-top: 17px
+    }
+}
+
+@media only screen and (max-width: 992px) {
+    .social_media_div {
+        margin-bottom: 1.2em
     }
 }
 
